# PacketForge

./: .gitignore  CMakeLists.txt  Commands.hpp  Compare.md  README.md  Serializer.hpp  build.sh  command_type.hpp  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/include/BenchmarkUtils/: BenchmarkRunner.hpp  CsvReporter.hpp  ISerializer.hpp
benchmarks/include/BenchmarkUtils/core/: BenchmarkData.hpp  DataGenerator.hpp
benchmarks/include/Timer/: Timer.hpp
benchmarks/packetforge/: CMakeLists.txt
benchmarks/protobuf/: CMakeLists.txt  benchmark.proto  main.cpp
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  UserCommandType.hpp  UserCommands.hpp  main.cpp
examples/example2/: CMakeLists.txt  UserCommandType.hpp
header_repository/: header_repository_node.hpp  serializer_header_repository.hpp
include/PacketForge/: CommandFactory.hpp  SerializerTraits.hpp
include/PacketForge/core/: CommandSerializer.hpp  Packet.hpp  SerializationInterfaces.hpp  Serializer.hpp
include/PacketForge/core/header_repository/: CommandType.hpp  DeserializerHeaderRepository.hpp  HeaderRepository.hpp  HeaderRepositoryNode.hpp  SerializerHeaderRepository.hpp
include/PacketForge/handlers/: IntHandlers.hpp  StringHandlers.hpp
